--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,9 +22,10 @@ body{
 .answerKey{
 	padding-top:10px;
 	font-size: 24px;
-	
 }
-
+.buttonMargin{
+	margin-top:30px;
+}
 
 
 /* --- MEDIA SCREEN --- */
